# moonvst

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json
.github/PULL_REQUEST_TEMPLATE/: wamr-upstream-sync.md
.github/workflows/: build.yml  deploy-pages.yml  test.yml
contracts/: memory-layout.json
designs/: MoonVST.pen
docs/: architecture-products.md  phase2-implementation-plan.md  phase2-showcase-design-for-codex.md  phase2-showcase-task-breakdown.md  studioone-crash-workaround-note.md  wamr-submodule-operations.md
docs/plans/: 2026-02-21-feat-high-quality-effects-dsp-porting-sources-plan.md
dsp/: moon.mod.json
dsp/_build/: packages.json
dsp/_build/wasm-gc/release/check/: all_pkgs.json  check.moon_db
dsp/_build/wasm-gc/release/check/src/: src.blackbox_test.mi  src.mi
dsp/_build/wasm-gc/release/check/src/utils/: utils.blackbox_test.mi  utils.mi
dsp/src/: exports.mbt  lib.mbt  lib_test.mbt  moon.pkg.json  params.mbt
dsp/src/utils/: constants.mbt  memory.mbt
plugin/: CMakeLists.txt
plugin/include/moonvst/: WasmDSP.h  memory_layout_gen.h
plugin/include/webvst/: WasmDSP.h
plugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WasmDSP.cpp
products/showcase/: README.md  product.config.json
products/showcase/dsp-entry/: lib.mbt  lib_test.mbt  params.mbt
products/showcase/ui-entry/: App.component.test.tsx  App.tsx
products/showcase/ui-entry/components/: CanvasInteraction.component.test.tsx  EdgeLayer.component.test.tsx  EdgeLayer.tsx  GraphCanvas.component.test.tsx  GraphCanvas.tsx  InspectorEditing.component.test.tsx  NodeEditorShell.component.test.tsx  NodeEditorShell.module.css  NodeEditorShell.tsx  NodePalette.component.test.tsx  NodePalette.tsx  NodePrimitives.component.test.tsx  NodePrimitives.module.css  NodePrimitives.tsx  graphUi.tsx  useGraphInteraction.ts
products/showcase/ui-entry/runtime/: graphContract.ts  graphContract.unit.test.ts  graphContractConstants.ts  graphParamBank.ts  graphParamBank.unit.test.ts  graphRuntimeBridge.ts  graphRuntimeBridge.unit.test.ts  graphUiState.ts  graphUiState.unit.test.ts
products/showcase/ui-entry/state/: graphHistory.ts  graphHistory.unit.test.ts  graphReducer.ts  graphReducer.unit.test.ts  graphTypes.ts  nodeParamSchema.ts
products/showcase/ui-entry/styles/: showcaseFonts.ts
products/showcase/ui-entry/test/: testing.ts
products/template/: README.md  product.config.json
products/template/dsp-entry/: lib.mbt  lib_test.mbt  params.mbt
products/template/ui-entry/: App.tsx
scripts/: build-dsp-core.js  build-dsp-core.test.js  build-dsp-product.js  build-dsp-product.test.js  build-dsp.ps1  build-dsp.sh  configure-plugin.js  dev-dsp.js  gen-memory-layout.js  gen-memory-layout.test.js  scaffold-product.js  select-product.js  setup-macos.sh  setup-windows.ps1  wamr-set-fork-url.ps1
tests/ci/: workflow-policy.test.mjs
tests/cpp/: CMakeLists.txt  plugin_smoke_test.cpp  wasm_dsp_test.cpp
ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
ui/public/worklet/: processor.js
ui/src/: App.component.test.tsx  App.module.css  App.tsx  main.tsx  main.unit.test.tsx  showcaseApp.component.test.tsx  templateApp.component.test.tsx
ui/src/components/: GainSlider.component.test.tsx  GainSlider.tsx  LevelMeter.component.test.tsx  LevelMeter.module.css  LevelMeter.tsx  WebAudioMenu.component.test.tsx  WebAudioMenu.module.css  WebAudioMenu.tsx
ui/src/hooks/: useParam.unit.test.ts
ui/src/juce/: index.d.ts  index.js
ui/src/runtime/: JuceRuntime.ts  JuceRuntime.unit.test.ts  WebRuntime.ts  WebRuntime.unit.test.ts  types.ts  types.unit.test.ts  useRuntime.ts  useRuntime.unit.test.ts
ui/src/test/: setup.unit.test.ts
ui/src/utils/: persistedAudio.unit.test.ts
ui/tests/e2e/: app.e2e.spec.ts
